change HTML, and CSS

--- a/index.html
+++ b/index.html
@@ -83,126 +83,152 @@
         <div class="col-md-8 primary-text" id="self-description">
           <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
           <p class="text-center mt-2 mb-3 fw-bold" id="job_based">
-            Website Developer, based in Switzerland
+            "I am a woman of action."
           </p>
           <div class="self_description">
             <p class="px-5 pt-3">
-              With over 18 years of experience in business development, sales,
-              and data management. I have developed a strong skill set in
-              prospecting, client relationship management, and strategic
-              planning. In 2023, I found my passion for web development and
-              completed an online bootcamp for women. This experience ignited my
-              desire to learn and grow in this field. Over the past two years,
-              I've honed my skills and am now an aspiring Front-End Web
-              Developer, committed to creating dynamic and responsive websites.
-              My extensive professional background seamlessly integrates with my
-              new career, allowing me to leverage my strategic and communication
-              skills in the tech industry.
+              At the beginning of my career, I was leaning towards of becoming a
+              researcher. I finished my Bachelors in Agricultural Economics and
+              majored in Price and Marketing analysis. My first job was in Data
+              management for local projects that my previous university was
+              conducting. I was collecting and storing information from each
+              projects assigned to me. I only stayed on the job for one year and
+              started to look for something more challenging. I moved to the
+              city and found a job as a Sales Assistant. Just a month being in
+              the position, my immediate manager saw the potential in me and
+              promoted me to Sales Manager. This started my journey in Sales and
+              Marketing from working with different multinational companies like
+              Unilever, Procter & Gamble and Nestle. After a few years working
+              in Sales, I took break to study Master in Business Management.
+              During this time, I also worked as Research assistant part-time
+              for a non-profit organization (International Rice Research
+              Institute).
             </p>
           </div>
-          <div>
-            <div class="text-center mt-5 ms-5">
-              <p class="d-inline-flex gap-5">
-                <button
-                  class="btn btn-primary px-5"
-                  data-bs-toggle="collapse"
-                  href="#multiCollapseExample1"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="multiCollapseExample1"
-                >
-                  Experience
-                </button>
-                <button
-                  class="btn btn-primary px-5"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#multiCollapseExample2"
-                  aria-expanded="false"
-                  aria-controls="multiCollapseExample2"
-                >
-                  Education
-                </button>
-                <button
-                  class="btn btn-primary px-5"
-                  type="button"
-                  aria-controls="multiCollapseExample3"
-                >
-                  <a
-                    class="download_cv"
-                    href="/files/Ginelle_Doubek_CV_March2025_Final.pdf"
-                    target="_blank"
-                  >
-                    Download CV</a
-                  >
-                </button>
-              </p>
-              <div class="row">
-                <div class="col-4" id="experience-container">
-                  <div
-                    class="collapse multi-collapse"
-                    id="multiCollapseExample1"
-                  >
-                    <div class="card card-body" id="experience">
-                      <div class="timeline-area">
-                        <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
-                        </div>
-                        <div class="job-description">
-                          <h3>Business Dev`t & Acquisition Manager</h3>
-                          <h4>Claviger Middle East, UAE & CH</h4>
-                          <p>2018-2021</p>
-                        </div>
-                        <div class="job-description">
-                          <h3>Global Sales Manager</h3>
-                          <h4>Starwood International, Dubai, UAE</h4>
-                          <p>2012-2018</p>
-                        </div>
-                      </div>
-                    </div>
+        </div>
+        <div class="self_description">
+          <p class="px-5">
+            I moved to Dubai, UAE 2 years after my career break to try my luck
+            in a new city. I found a Sales job in the hotel industry. I started
+            as a Sales Specialist for Sheraton JBR and after a year of hard
+            work, I was chosen to be part of the Global Sales Office for the
+            Mother company "Starwood Hotels". When my 8 years stint in Dubai has
+            come to an end, I moved to Switzerland with my husband. For another
+            2 years, I continued working remotely from Switzerland for a local
+            company in Dubai representing them in European countries. I also
+            made use of this time to learn German. I got my first job as a
+            Congress Coordinator for EULAR in Zurich. In 2023, I found my
+            passion in coding for Web Development. I have completed various
+            course on an online Bootcamp. This experience has ignited my desire
+            to learn and grow in this field. For the past 2 years, I have honed
+            my skills in HTML, CSS and JavaScript. I have created applications
+            and websites. I believe that all these years of my experience have
+            given me different skill set that I could apply to my personal and
+            professional life. I am dedicated and driven, I constantly putting
+            in effort to achieve my goals and improve them. I am always eager to
+            learn and explore new ideas. My optimism and belief in myself give
+            me the strength to tackle any obstacle and pursue my ambitions.
+            "Quitting" is not in may vocabulary. I believe in the saying "When
+            the going gets tough, the tough get going".
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="text-center mt-5 ms-5">
+        <p class="d-inline-flex gap-5">
+          <button
+            class="btn btn-primary px-5"
+            data-bs-toggle="collapse"
+            href="#multiCollapseExample1"
+            role="button"
+            aria-expanded="false"
+            aria-controls="multiCollapseExample1"
+          >
+            Experience
+          </button>
+          <button
+            class="btn btn-primary px-5"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#multiCollapseExample2"
+            aria-expanded="false"
+            aria-controls="multiCollapseExample2"
+          >
+            Education
+          </button>
+          <button
+            class="btn btn-primary px-5"
+            type="button"
+            aria-controls="multiCollapseExample3"
+          >
+            <a
+              class="download_cv"
+              href="/files/Ginelle_Doubek_CV_March2025_Final.pdf"
+              target="_blank"
+            >
+              Download CV</a
+            >
+          </button>
+        </p>
+        <div class="row">
+          <div class="col-4" id="experience-container">
+            <div class="collapse multi-collapse" id="multiCollapseExample1">
+              <div class="card card-body" id="experience">
+                <div class="timeline-area">
+                  <div class="job-description">
+                    <h3>Abstract Coordinator</h3>
+                    <h4>EULAR - Zurich, Swizerland</h4>
+                    <p>2021-2023</p>
                   </div>
-                </div>
-                <div class="col-4">
-                  <div
-                    class="collapse multi-collapse"
-                    id="multiCollapseExample2"
-                  >
-                    <div class="card card-body" id="education">
-                      <div class="timeline-area">
-                        <div class="education-description">
-                          <h3>Web Developing Bootcamp</h3>
-                          <h4>SheCodes - https://www.shecodes.io/</h4>
-                          <p>2024 - current</p>
-                        </div>
-                        <div class="education-description">
-                          <h3>Prof. Certificate Program in Data Analytics</h3>
-                          <h4>Simplilearn - University of Purdue</h4>
-                          <p>2022-2023</p>
-                        </div>
-                        <div class="education-description">
-                          <h3>Master in Business Management</h3>
-                          <h4>University of Philippines, Los Baños</h4>
-                          <p>2009-2011</p>
-                        </div>
-                        <div class="education-description">
-                          <h3>Bachelors in Agricultural Economics</h3>
-                          <h4>University of Philippines, Los Baños</h4>
-                          <p>1999-2003</p>
-                        </div>
-                      </div>
-                    </div>
+                  <div class="job-description">
+                    <h3>Business Dev`t & Acquisition Manager</h3>
+                    <h4>Claviger Middle East, UAE & CH</h4>
+                    <p>2018-2021</p>
                   </div>
-                </div>
-                <div class="col-4">
-                  <div
-                    class="collapse multi-collapse"
-                    id="multiCollapseExample3"
-                  ></div>
+                  <div class="job-description">
+                    <h3>Global Sales Manager</h3>
+                    <h4>Starwood International, Dubai, UAE</h4>
+                    <p>2012-2018</p>
+                  </div>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-4">
+            <div class="collapse multi-collapse" id="multiCollapseExample2">
+              <div class="card card-body" id="education">
+                <div class="timeline-area">
+                  <div class="education-description">
+                    <h3>Web Developing Bootcamp</h3>
+                    <h4>SheCodes - https://www.shecodes.io/</h4>
+                    <p>2024 - current</p>
+                  </div>
+                  <div class="education-description">
+                    <h3>Prof. Certificate Program in Data Analytics</h3>
+                    <h4>Simplilearn - University of Purdue</h4>
+                    <p>2022-2023</p>
+                  </div>
+                  <div class="education-description">
+                    <h3>Master in Business Management</h3>
+                    <h4>University of Philippines, Los Baños</h4>
+                    <p>2009-2011</p>
+                  </div>
+                  <div class="education-description">
+                    <h3>Bachelors in Agricultural Economics</h3>
+                    <h4>University of Philippines, Los Baños</h4>
+                    <p>1999-2003</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div
+              class="collapse multi-collapse"
+              id="multiCollapseExample3"
+            ></div>
           </div>
         </div>
       </div>
