--- a/index.html
+++ b/index.html
@@ -117,19 +117,21 @@
             2 years, I continued working remotely from Switzerland for a local
             company in Dubai representing them in European countries. I also
             made use of this time to learn German. I got my first job as a
-            Congress Coordinator for EULAR in Zurich. In 2023, I found my
-            passion in coding for Web Development. I have completed various
-            course on an online Bootcamp. This experience has ignited my desire
-            to learn and grow in this field. For the past 2 years, I have honed
-            my skills in HTML, CSS and JavaScript. I have created applications
-            and websites. I believe that all these years of my experience have
-            given me different skill set that I could apply to my personal and
-            professional life. I am dedicated and driven, I constantly putting
-            in effort to achieve my goals and improve them. I am always eager to
-            learn and explore new ideas. My optimism and belief in myself give
-            me the strength to tackle any obstacle and pursue my ambitions.
-            "Quitting" is not in may vocabulary. I believe in the saying "When
-            the going gets tough, the tough get going".
+            Congress Coordinator for EULAR in Zurich.
+            <br />
+            <br />
+            In 2023, I found my passion in coding for Web Development. I have
+            completed various course thru online Bootcamp. This experience has
+            ignited my desire to learn and grow in this field. For the past 2
+            years, I have honed my skills in HTML, CSS and JavaScript. I have
+            created applications and websites. I believe that all these years of
+            my experience have given me different skill set that I could apply
+            to my personal and professional life. I am dedicated and driven, I
+            constantly putting in effort to achieve my goals and improve them. I
+            am always eager to learn and explore new ideas. My optimism and
+            belief in myself give me the strength to tackle any obstacle and
+            pursue my ambitions. "Quitting" is not in may vocabulary. I believe
+            in the saying "When the going gets tough, the tough get going".
           </p>
         </div>
       </div>
