--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
     <div class="container pb-4" id="description-container">
       <div class="row">
-        <div class="col-lg-4 text-center mt-5 pt-5">
+        <div class="col-lg-4 text-center pt-5 mb-3">
           <img
             src="images/ginelle_transparent.png"
             class="img-fluid rounded"
@@ -130,7 +130,7 @@
             constantly putting in effort to achieve my goals and improve them. I
             am always eager to learn and explore new ideas. My optimism and
             belief in myself give me the strength to tackle any obstacle and
-            pursue my ambitions. "Quitting" is not in may vocabulary. I believe
+            pursue my ambitions. "Quitting" is not in my vocabulary. I believe
             in the saying "When the going gets tough, the tough get going".
           </p>
         </div>
@@ -243,167 +243,167 @@
         <div class="col-7 border-end ps-5">
           <h1 id="skills">Skills</h1>
           <div class="row row-cols-3">
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/010/original/icon-html.png?1711034484"
                 class="skills"
                 title="HTML is the backbone of web design, crucial for content creation."
                 alt="HTML_icon"
               />
-              HTML
+              <div>HTML</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/004/original/icon-css.png?1711033534"
                 class="skills"
                 title="CSS styles websites, essential for layout and visual appeal."
                 alt="CSS_icon"
               />
-              CSS
+              <div>CSS</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/011/original/icon-js.png?1711033542"
                 class="skills"
                 title="JavaScript enables user interactions, essential for modern applications."
                 alt="Javascript_icon"
               />
-              Javascript
+              <div>JavaScript</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/005/original/editor.png?1701382155"
                 class="skills"
                 title="VSCode is a the #1 tool for writing code easily and quickly."
                 alt="VSCode_icon"
               />
-              VSCode
+              <div>VSCode</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
                 class="skills"
                 title="Connect your code to other applications, making them work together."
                 alt="API_icon"
               />
-              API
+              <div>API</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
                 class="skills"
                 title="Use GitHub to keep and work on code with others."
                 alt="Github_icon"
               />
-              Github
+              <div>Github</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
                 class="skills"
                 title="Understand hosting to publish and keep websites online."
                 alt="Hosting_icon"
               />
-              Hosting
+              <div>Hosting</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
                 class="skills"
                 title="Learn Python for easy and powerful programming across many fields."
                 alt="Python_icon"
               />
-              Python
+              <div>Python</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
                 class="skills"
                 title="Understand data structures to organize and manage information efficiently."
                 alt="DataStructure_icon"
               />
-              Data Structure
+              <div>Data Structure</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
                 class="skills"
                 title="Learn Object-Oriented Programming (OOP) to organize code with objects for clearer structure."
                 alt="OOP_icon"
               />
-              OOP
+              <div>OOP</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
                 class="skills"
                 title="Master file manipulation to edit and manage files programmatically."
                 alt="FileManipulation_icon"
               />
-              File Manipulation
+              <div>File Manipulation</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
                 class="skills"
                 title="Explore data visualization with Python and Plotting to present data in compelling ways."
                 alt="DataVisualization_icon"
               />
-              Data Visualization
+              <div>Data Visualization</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/024/original/icon-data-manipulation.png?1712224508"
                 class="skills"
                 title="Learn how to use Python to easily filter, map, and organize data with code."
                 alt="DataManipulation_icon"
               />
-              Data Manipulation
+              <div>Data Manipulation</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/001/original/icon-AI.png?1711011711"
                 class="skills rotating"
                 title="Integrate Artificial Intelligence into your code to make your code drastically smarter."
                 alt="AI_icon"
               />
-              AI
+              <div>AI</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/019/original/Git-Icon-1788C.png?1710331679"
                 class="skills"
                 title="Learn how to track your code changes and collaborate using Git."
                 alt="Git_icon"
               />
-              Git
+              <div>Git</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/003/original/bootstrap.png?1701382150"
                 class="skills"
                 title="Use Bootstrap to quickly design and customize responsive websites."
                 alt="Bootstrap_icon"
               />
-              Bootstrap
+              <div>Bootstrap</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/014/original/seo.png?1701426631"
                 class="skills"
                 title="Learn SEO (Search Engine Optimization) to boost your website's visibility on search engines."
                 alt="SEO_icon"
               />
-              SEO
+              <div>SEO</div>
             </div>
-            <div class="col mt-2">
+            <div class="col mt-2 text-center">
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/013/original/responsive.png?1701382225"
                 class="skills"
                 title="Learn responsive development to make websites work on any device."
                 alt="Responsive_icon"
               />
-              Responsive
+              <div>Responsive</div>
             </div>
           </div>
         </div>
@@ -449,6 +449,8 @@
               <div>Cook/Bake</div>
             </div>
           </div>
+          <br /><br />
+          <h1 id="languages">Languages</h1>
         </div>
       </div>
     </div>
