added languages in HTML

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             "I am a woman of action."
           </p>
           <div class="self_description">
-            <p class="px-5 pt-3">
+            <p class="px-5 pt-4">
               At the beginning of my career, I was leaning towards of becoming a
               researcher. I finished my Bachelors in Agricultural Economics and
               majored in Price and Marketing analysis. My first job was in Data
@@ -451,6 +451,20 @@
           </div>
           <br /><br />
           <h1 id="languages">Languages</h1>
+          <div class="row row-cols-3 text-center mt-3">
+            <div class="col hobbies mt-2 text-center">
+              <div id="english">C1</div>
+              <div>English</div>
+            </div>
+            <div class="col hobbies mt-2 text-center">
+              <div id="german">B2</div>
+              <div>German</div>
+            </div>
+            <div class="col hobbies mt-2 text-center">
+              <div id="filipino">Dialect</div>
+              <div>Filipino</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
