updated CSS class name

--- a/index.html
+++ b/index.html
@@ -453,15 +453,15 @@
           <h1 id="languages">Languages</h1>
           <div class="row row-cols-3 text-center mt-3">
             <div class="col hobbies mt-2 text-center">
-              <div id="english">C1</div>
+              <div class="langauge-class">C1</div>
               <div>English</div>
             </div>
             <div class="col hobbies mt-2 text-center">
-              <div id="german">B2</div>
+              <div class="langauge-class">B2</div>
               <div>German</div>
             </div>
             <div class="col hobbies mt-2 text-center">
-              <div id="filipino">Dialect</div>
+              <div class="langauge-class">Dialect</div>
               <div>Filipino</div>
             </div>
           </div>
