added Ginny's AI chat

--- a/index.html
+++ b/index.html
@@ -136,8 +136,31 @@
         </div>
       </div>
     </div>
+    <div class="container_AI">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center" id="title_AI">Get to know me more!</h1>
+          <div class="form_container">
+            <form id="question-request">
+              <input
+                type="text"
+                placeholder=" Ask me something... 😎"
+                autofocus
+                required
+                autocomplete="off"
+                class="input_element"
+                id="user_instruction"
+              />
+              <input type="submit" class="submit_button" />
+            </form>
+            <div class="hint mb-2">i.e. Hobby, Sports, etc.</div>
+            <div class="question hidden pt-3" id="question"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div>
+    <div class="button_container">
       <div class="text-center mt-5 ms-5">
         <p class="d-inline-flex gap-5">
           <button
