--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <form id="question-request">
               <input
                 type="text"
-                placeholder=" Ask me something... 😎"
+                placeholder=" Ask me something...i.e. Hobby, Sports, etc. 😎"
                 autofocus
                 required
                 autocomplete="off"
@@ -153,7 +153,7 @@
               />
               <input type="submit" class="submit_button" />
             </form>
-            <div class="hint mb-2">i.e. Hobby, Sports, etc.</div>
+
             <div class="question hidden pt-3" id="question"></div>
           </div>
         </div>
