--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <p>2021-2023</p>
                   </div>
                   <div class="job-description">
-                    <h3>Business Dev`t & Acquisition Manager</h3>
+                    <h3>Business Development & Acquisition Manager</h3>
                     <h4>Claviger Middle East, UAE & CH</h4>
                     <p>2018-2021</p>
                   </div>
