--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </button>
         </p>
         <div class="row">
-          <div class="col-4" id="experience-container">
+          <div class="col -4" id="experience-container">
             <div class="collapse multi-collapse" id="multiCollapseExample1">
               <div class="card card-body" id="experience">
                 <div class="timeline-area">
@@ -225,7 +225,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-4" id="education-container">
             <div class="collapse multi-collapse" id="multiCollapseExample2">
               <div class="card card-body" id="education">
                 <div class="timeline-area">
