--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Ginelle Doubek Homepage</title>
+    <title>Ginelle Doubek Website</title>
   </head>
   <body>
     <nav class="nav-bar">
