--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ginny's Website provides her background information such as Experience, Education and Skills."
+    />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script
@@ -78,6 +81,7 @@
           <img
             src="images/ginelle_transparent.png"
             class="img-fluid rounded"
+            alt="Ginelle's Photo"
             id="ginelle"
           />
         </div>
@@ -196,6 +200,7 @@
               class="download_cv"
               href="/files/Ginelle_Doubek_CV_March2025_Final.pdf"
               target="_blank"
+              title="Ginny's Resume"
             >
               Download CV</a
             >
@@ -456,8 +461,8 @@
             </div>
 
             <div class="col hobbies mt-2">
-              <i class="bx bx-landscape bx-lg"></i>
-              <div>Hike</div>
+              <i class="bx bx-body bx-lg"></i>
+              <div>Yoga</div>
             </div>
 
             <div class="col hobbies mt-2">
