--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
         <div class="col-md-8 primary-text" id="self-description">
           <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
+          <h3 class="text-center">~Ginny~</h3>
           <p class="text-center mt-2 mb-3" id="job_based">
             "I am a woman of action."
           </p>
