--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <p class="text-center mt-2 mb-3" id="job_based">
             "I am a woman of action."
           </p>
-          <div class="self_description">
+          <div class="self_description" id="self_description_intro">
             <p class="px-5 pt-2">
               At the beginning of my career, I was leaning towards of becoming a
               researcher. I finished my Bachelors in Agricultural Economics and
