--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="nav-bar">
       <div class="side-nav">
-        <a href="#" class="navbar-logo">GD</a>
+        <a href="#" class="navbar-logo" title="GinnyD's Logo">GD</a>
         <ul class="nav-links">
           <li>
             <a href="#"
@@ -83,10 +83,11 @@
             class="img-fluid rounded"
             alt="Ginelle's Photo"
             id="ginelle"
+            title="Ginny"
           />
         </div>
         <div class="col-md-8 primary-text" id="self-description">
-          <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
+          <h1 class="text-center mt-2" id="ginelle_doubek">Ginelle Doubek</h1>
           <h3 class="text-center">~Ginny~</h3>
           <p class="text-center mt-2 mb-3" id="job_based">
             "I am a woman of action."
