--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="nav-bar">
       <div class="side-nav">
-        <a href="#" class="navbar-logo" title="GinnyD's Logo">GD</a>
+        <a href="./index.html" class="navbar-logo" title="GinnyD's Logo">GD</a>
         <ul class="nav-links">
           <li>
             <a href="#"
@@ -75,7 +75,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container pb-4" id="description-container">
+    <div class="photo-container pb-4" id="description-container">
       <div class="row">
         <div class="col-lg-4 text-center pt-5 mb-3">
           <img
