--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </ul>
       </div>
     </nav>
-    <div class="photo-container pb-4" id="description-container">
+    <div class="container pb-4" id="description-container">
       <div class="row">
         <div class="col-lg-4 text-center pt-5 mb-3">
           <img
