--- a/index.html
+++ b/index.html
@@ -588,7 +588,9 @@
       <div>
         <small
           >All rights reserved &copy; 2025 Ginelle Doubek. Open-sourced in
-          Github. Hosted by Netlify.
+          <a href="https://github.com/ginedou0315/ginelle_doubek_resume"
+            >Github</a
+          >. Hosted by <a href="ginelle-doubek.netlify.app">Netlify</a>.
         </small>
       </div>
     </footer>
