added icon for contact

--- a/index.html
+++ b/index.html
@@ -583,6 +583,12 @@
             title="Netlify"
             ><i class="bx bxl-netlify"></i
           ></a>
+          <a
+            href="https://public.tableau.com/app/profile/ginelle.doubek/vizzes"
+            target="_blank"
+            title="Tableau"
+            ><img src="./images/tableau.svg" alt="tableau_icon" id="tableau"
+          /></a>
         </span>
       </div>
       <div>
